2014-08-22  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Support multibyte filenames in pipe (Windows only)

2014-07-23  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Short-file-name convention is incompatible with
	--src-specials (Windows only).

2014-07-21  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Use getnullstr() in maketexstring(), also in aleph.

2014-07-19  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Use getnullstr() in maketexstring(), as in pdfTeX,
	in most cases in order to avoid an assertion error.

2014-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Replace the deprecated spawnvp() by _spawnvp(),
	they differ for 64-bit MinGW.

2014-07-04  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Remove redundant cpp macros (w32 only).

2014-06-20  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Support short-file-name convention (w32 only).

2014-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Update to e-pTeX and e-upTeX from Akira Kakuto.
	* texmfmp.c (getfiledump): Move definition of this function
	also used by e-(u)pTeX from ../pdftexdir/utils.c to here.

2014-01-20  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* printversion.c: 2013 ---> 2014.

2014-01-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Do not declare dump_name, now done in change files.

2014-01-14  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: use fsyscp_system instead of system (Windows only).

2013-12-31  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* openclose.c: bug fix about error check when fopen.
	Use fsyscp_fopen() instead of fsyscp_xfopen() (Windows only)
	* texmfmp.c: Use get_command_line_args_utf8() (Windows only)

2013-12-03  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* openclose.c, texmfmp.c: Support KANJI file name in (e)upTeX and
	XeTeX on Windows.

2013-06-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Update to e-pTeX and e-upTeX 130605 from Hironori Kitagawa.